apps/vue-frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vue-frontend
  labels:
    name: vue-frontend
    app-type: frontend
    framework: vue
